<resources>
    <string name="app_name">Tnu Hiuch 1.0</string>
    <string name="no_camera_access" translatable="false">please grant camera permissions</string>
    <string name="difficulty">difficulty</string>
    <string name="kiss">kiss</string>
    <string name="cheek_blow">blow cheeks</string>
    <string name="smile">smile</string>
    <string name="open_mouth">open mouth</string>
    <string name="stick_out_tongue">stick out tongue</string>
    <string name="symmery_level">symmetry level</string>
    <string name="start_exr">start exercise</string>
    <string name="history">history</string>
    <string name="settings">settings</string>
    <string name="save">save</string>
    <string name="relax_command">relax...</string>
    <string name="good_job">Good Job!</string>
    <string name="back">Back</string>
    <string name="easy_scale">easy</string>
    <string name="hard_scale">hard</string>

    //calibration
    <string name="calibration_kiss">kiss calibration</string>
    <string name="calibration_cheek_blow">blow cheeks calibration</string>
    <string name="calibration_smile">smile calibration</string>
    <string name="calibration_open_mouth">open mouth calibration</string>
    <string name="calibration_stick_out_tongue">stick out tongue calibration</string>
    <string name="calibration_relaxation">relaxation calibration</string>
    <string name="calibration">calibration</string>

</resources>